--- a/airbnb_backend_project/package.json
+++ b/airbnb_backend_project/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "dev": "nodemon server.js"
+    "dev": "concurrently \"npm run server\" \"npm run tailwind\"",
+    "server": "nodemon server.js",
+    "tailwind": "tailwindcss -i ./views/input.css -o ./public/output.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -15,11 +16,13 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.13",
     "body-parser": "^2.2.0",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.2.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13"
   }
