--- a/airbnb_backend_project/package.json
+++ b/airbnb_backend_project/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "mongodb": "^6.19.0",
+    "mongoose": "^8.18.1",
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
