--- a/airbnb_backend_project/package.json
+++ b/airbnb_backend_project/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.13",
     "body-parser": "^2.2.0",
+    "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "mongodb": "^6.19.0",
