--- a/airbnb_backend_project/package.json
+++ b/airbnb_backend_project/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.13",
     "body-parser": "^2.2.0",
+    "connect-mongodb-session": "^5.0.0",
     "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.1",
     "nodemon": "^3.1.10"
